--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,8 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-locale: "fr"
+translation_subdomain: fr
+domain: opinionated-digital-center.org
 title: Opinionated Digital Center
 email: info@opinionated-digital-center.org
 description: >- # this means to ignore newlines until "baseurl:"
