--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 main:
-  - title_ui_text_key: posts_label
+  - title: Posts
     url: /posts/
-  - title_ui_text_key: categories_label_no_colon
+  - title: Categories
     url: /categories/
-  - title_ui_text_key: tags_label_no_colon
+  - title: Tags
     url: /tags/
-  - title_ui_text_key: about_label
+  - title: About
     url: /about/
