--- a/_config.yml
+++ b/_config.yml
@@ -101,6 +101,14 @@ footer:
 defaults:
   # _posts
   - scope:
+      path: "_drafts"
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+  # _posts
+  - scope:
       path: "_posts"
       type: posts
     values:
