--- a/_config.yml
+++ b/_config.yml
@@ -110,6 +110,17 @@ defaults:
       comments: true
       share: true
       related: true
+  # _drafts
+  - scope:
+      path: "_drafts"
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: true
+      share: true
+      related: true
   # _pages
   - scope:
       path: "_pages"
